--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -299,7 +299,7 @@
 											field and your choice of input text. The bot then takes your input text (e.g. "This is some text") and sends out
 											converted text (e.g. "tHiS iS SOMe TExT"). <a href="https://knowyourmeme.com/memes/mocking-spongebob">Here</a> is some cultural/historical context for this meme.
 										</p>
-										<a target="_blank" href="works_single_1.html" class="btn hover-animated">
+										<a target="_blank" href="https://spongebob-meme-slack-bot.netlify.app/" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
 										</a>
