--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="description" content="erikopinaldo" />
-	<meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cvio, portfolio" />
+	<meta name="keywords" content="fullstack, developer, software engineer, toronto, vcard, resposnive, resume, personal, card, cv, portfolio" />
 	<meta name="author" content="erikopinaldo" />
 
 	<!-- Title -->
